# FrostBar

./: .gitignore  404.html  Architecture.md  Cargo.toml  Configuration.md  README.md  flake.nix  index.html  mkdocs.yml  pyproject.toml  rust-toolchain.toml  rustfmt.toml  sitemap.xml
.github/workflows/: cachix.yml  ci.yml  docs.yml  nix-cache.yml
Configuration/Introduction/: index.html
Configuration/Modules/: index.html
Development/Architecture/: index.html
Development/Design/: index.html
Development/Setup/: index.html
Installation/: index.html
assets/: cava-config  default-config.kdl
docs/: flake.nix  index.md  mkdocs.yml  pyproject.toml
docs/wiki/: Installation.md  index.md
docs/wiki/Configuration/: Introduction.md  Modules.md
docs/wiki/Development/: Architecture.md  Design.md  Setup.md  Stack.md
frostbar_tray/: Cargo.toml
frostbar_tray/examples/: test.rs
frostbar_tray/src/: client.rs  data.rs  error.rs  item.rs  lib.rs  menu.rs  proxy.rs  watcher.rs
search/: search_index.json
src/: animated_container.rs  bar.rs  battery_widget.rs  cava.rs  cli.rs  config.rs  constants.rs  dbus_proxy.rs  file_watcher.rs  icon_cache.rs  main.rs  module.rs  modules.rs  mpris.rs  mpris_player.rs  niri.rs  other.rs  popup_tooltip.rs  spectrum.rs  style.rs  systray.rs  tooltip.rs  utils.rs
src/dbus_proxy/: mod.rs  mpris_player.rs  mpris_player.xml  status_notifier_watcher.rs  status_notifier_watcher.xml
src/modules/: battery.rs  cava.rs  label.rs  mod.rs  mpris.rs  niri.rs  spectrum.rs  systray.rs  time.rs  views.rs
src/modules/audio_visualizer/: fft.rs  service.rs  view.rs
src/modules/audio_visualizer/pipewire/: meter_tap.rs  pw_monitor.rs  util.rs
src/modules/battery/: service.rs  view.rs
src/modules/cava/: service.rs  view.rs
src/modules/mpris/: mpris_player.rs  service.rs  view.rs
src/modules/niri/: mod.rs  service.rs  view.rs  widget.rs
src/modules/spectrum/: fft.rs  pipewire.rs  service.rs  view.rs
src/modules/spectrum/pipewire/: batcher.rs  config.rs  meter_tap.rs  pw_loopback.rs  pw_monitor.rs  pw_registry.rs  pw_router.rs  pw_virtual_sink.rs  registry_monitor.rs  ring_buffer.rs  util.rs
src/modules/spectrum/pipewire/pw_loopback/: state.rs
src/modules/spectrum/pipewire/util/: audio.rs  log.rs
src/modules/spectrum/pipewire/util/pipewire/: graph.rs
src/modules/system_tray/: service.rs  view.rs
src/modules/systray/: mod.rs  watcher.rs
src/modules/time/: service.rs  view.rs
src/other/: config.rs  constants.rs  file_watcher.rs  icon_cache.rs
src/services/: battery.rs  cava.rs  mod.rs  mpris.rs  niri.rs  system_tray.rs  systray.rs  time.rs
src/services/systray/: watcher.rs
src/utils/: log.rs  niri.rs  style.rs  window.rs
src/views/: battery.rs  cava.rs  label.rs  mod.rs  mpris.rs  niri.rs  systray.rs  time.rs
