[package]
name = "frostbar"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-channel = "2.5.0"
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "clock",
    "alloc",
] }
color-thief = "0.2.2"
dashmap = "6.1.0"
directories = "6.0.0"
freedesktop-desktop-entry = { version = "0.7.19", default-features = false }
freedesktop-icons = "0.4.0"
iced = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1", default-features = false, features = [
    "advanced",
    "canvas",
    "image",
    "lazy",
    "svg",
    "tokio",
    "wgpu",
    "web-colors",
] }
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
knus = "3.3.1"
linicon = "2.3.0"
miette = { version = "7.6.0", features = ["fancy-no-backtrace"] }
niri-ipc = { git = "https://github.com/YaLTeR/niri/", version = "=25.11.0" }
notify-rust = "4.11.7"
parking_lot = "0.12.5"
pipewire = "0.9.2"
profiling = { version = "1.0.17" }
realfft = "3.5.0"
reqwest = { version = "0.12.23", features = ["blocking"] }
rustc-hash = { version = "2.1.1" }
serde = "1.0.228"
serde_json = "1.0.145"
spa = "0.5.1"
starship-battery = { version = "0.10.2", default-features = false }
system-tray = "0.8.4"
tikv-jemallocator = "0.6.1"
tokio = { version = "1.47.1", features = ["macros"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "=0.3.19", default-features = false, features = [
    "fmt",
    "std",
    "chrono",
    "env-filter",
    "ansi",
] }
tracy-client = { version = "=0.17.3", default-features = false }
zbus = { version = "5.10.0", default-features = false, features = ["tokio"] }

[features]
tracy = ["tracy-client/default", "profiling/profile-with-tracy"]
tracy-ondemand = [
    "tracy",
    "tracy-client/ondemand",
    "tracy-client/manual-lifetime",
]
tracy-allocations = ["tracy"]

[profile.dev]
opt-level = 3

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
unreadable_literal = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
