[package]
name = "frostbar"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
tracy = ["tracy-client/default", "profiling/profile-with-tracy"]
tracy-ondemand = [
    "tracy",
    "tracy-client/ondemand",
    "tracy-client/manual-lifetime",
]
tracy-allocations = ["tracy"]

[dependencies]
frostbar_tray.workspace = true
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "clock",
    "alloc",
] }
clap = { version = "4.5.54", features = ["derive"] }
color-thief = "0.2.2"
dashmap = "6.1.0"
freedesktop-desktop-entry = { version = "0.8.1", default-features = false }
freedesktop-icons = "0.4.0"
iced = { version = "0.14.0", default-features = false, features = [
    "advanced",
    "canvas",
    "image",
    "lazy",
    "selector",
    "svg",
    "smol",
    "wayland",
    "wgpu",
] }
iced_layershell = { version = "0.15.0", default-features = false }
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
linicon = "2.3.0"
miette = { version = "5.10.0", features = ["fancy-no-backtrace"] }
niri-config = { git = "https://github.com/niri-wm/niri", tag = "v25.11" }
niri-ipc = { git = "https://github.com/niri-wm/niri", tag = "v25.11" }
notify-rust = "4.11.7"
owo-colors = "4.2.2"
parking_lot = "0.12.5"
pipewire = "0.9.2"
profiling = { version = "1.0.17" }
realfft = "3.5.0"
rustc-hash = { version = "2.1.1" }
serde = "1.0.228"
serde_json = "1.0.145"
starship-battery = { version = "0.10.2", default-features = false }
tikv-jemallocator = "0.6.1"
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracy-client = { version = "0.18.4" }
zbus = { version = "5.10.0", default-features = false, features = ["async-io"] }
knuffel = { version = "3.2.0", default-features = false, features = [
    "derive",
    "line-numbers",
] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
isahc = { version = "1.7.2", default-features = false }
smol = "2.0.2"
asynchronous-codec = "0.7.0"


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
overflow-checks = false

[workspace]
resolver = "3"
members = ["frostbar_tray"]

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
frostbar_tray = { version = "*", path = "frostbar_tray" }

tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "=0.3.19", default-features = false, features = [
    "fmt",
    "std",
    "chrono",
    "env-filter",
    "ansi",
] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
unreadable_literal = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
