[package]
name = "frostbar_tray"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zbus.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
futures-lite = "2.6.1"
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
